# VIPS

./: CMakeLists.txt  README.md  pose_output.txt  笔记.txt
AdelaiDet/adet/config/: config.py
AdelaiDet/demo/: BlendMask.py  GetInstanceSeg.py  TestLBL.py  demo.py  predictor.py  test1.py
AdelaiDet/detectron2/: setup.py
PcTest/: hello.py  pyapi.cpp
config/: BlendMaskSettings.yaml  KITTI-00-unrectified.yaml  KITTI_config-02.yaml  MH_05_cam0.txt  euroc_config.yaml
config/0926_imu/: timestamps.txt
config/0926_imu/data/: 0000000000.txt  0000000001.txt  0000000002.txt  0000000003.txt  0000000004.txt  0000000005.txt  0000000006.txt  0000000007.txt  0000000008.txt  0000000009.txt  0000000010.txt  0000000011.txt  0000000012.txt  0000000013.txt  0000000014.txt  0000000015.txt  0000000016.txt  0000000017.txt  0000000018.txt  0000000019.txt  0000000020.txt  0000000021.txt  0000000022.txt  0000000023.txt  0000000024.txt  0000000025.txt  0000000026.txt  0000000027.txt  0000000028.txt  0000000029.txt  0000000030.txt  0000000031.txt  0000000032.txt  0000000033.txt  0000000034.txt  0000000035.txt  0000000036.txt  0000000037.txt  0000000038.txt  0000000039.txt  (+2785 more)
include/: Conversion.h  InstanceSeg.h  Instance_Object.h  MSG.h  Pose_for_Objects.h  System.h  estimator.h  feature_manager.h  feature_tracker.h  parameters.h  toolsForModel.h
include/camodocal/camera_models/: Camera.h  PinholeCamera.h
include/factor/: integration_base.h
include/initial/: initial_ex_rotation.h  initial_sfm.h
include/utility/: tic_toc.h
src/: Conversion.cc  InstanceSeg.cpp  Instance_Object.cpp  MSG.cpp  Pose_for_Objects.cpp  System.cpp  SystemFirstDiffTrack.cpp  estimator.cpp  feature_manager.cpp  feature_tracker.cpp  feature_trackerOriginal.cpp  feature_tracker_parameters.cpp  feature_tracker_v1.cpp  parameters.cpp  toolsForModel.cpp
src/backend/: problem.cc
src/camera_models/camera_models/: Camera.cc  CameraFactory.cc  PinholeCamera.cc
src/initial/: initial_aligment.cpp  initial_ex_rotation.cpp  initial_sfm.cpp  solve_5pts.cpp
src/utility/: Random.cpp  Timestamp.cpp
test/: CpInsSegTest.cpp  CpInsSegTestOriginal.cpp  ImgtypeTest.cpp  InTest.cpp  TestSystem.cpp  TestSystemOriginal.cpp  run_KITTI.cpp  run_eurocOriginal.cpp
